third_party/move/move-compiler-v2/tests/lambda/inline-parity/return_in_lambda.lambda.exp
// -- Model dump before env processor pipeline:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor unused checks:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor type parameter check:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor check recursive struct definition:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor check cyclic type instantiation:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor unused struct params check:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor access and use check before inlining:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor inlining:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor access and use check after inlining:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor acquires check:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor simplifier:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(|(x: u64, y: u64): (u64, u64)| return Test::adder(x, y), 10, 100)
    }
} // end 0x42::Test


// -- Model dump after env processor lambda-lifting:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(closure Test::main$lambda$1(), 10, 100)
    }
    private fun main$lambda$1(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
} // end 0x42::Test


// -- Model dump after env processor specification checker:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(closure Test::main$lambda$1(), 10, 100)
    }
    private fun main$lambda$1(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
} // end 0x42::Test


// -- Model dump after env processor specification rewriter:
module 0x42::Test {
    private fun adder(x: u64,y: u64): u64 {
        Add<u64>(x, y)
    }
    private fun apply(f: |(u64, u64)|u64,x: u64,y: u64): u64 {
        (f)(x, y)
    }
    public fun main(): u64 {
        Test::apply(closure Test::main$lambda$1(), 10, 100)
    }
    private fun main$lambda$1(x: u64,y: u64): u64 {
        return Test::adder(x, y)
    }
} // end 0x42::Test



Diagnostics:
error: Calls to function values other than inline function parameters not yet supported
  ┌─ tests/lambda/inline-parity/return_in_lambda.move:4:9
  │
4 │         f(x, y)
  │         ^

error: Function-typed values not yet supported except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/return_in_lambda.move:12:15
   │
12 │           apply(|x, y| {
   │ ╭───────────────^
13 │ │             return adder(x, y)
14 │ │         }, 10, 100)
   │ ╰─────────^
